<resources>
    <string name="app_name">SocialMaps</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="action_settings">Settings</string>
    <string name="action_user">Account</string>
    <string name="title_activity_new_location">NewLocationActivity</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="title_activity_location">LocationActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="LoginBanner">Login Banner</string>
    <string name="Username">Username:</string>
    <string name="UsernameTextentry">Username</string>
    <string name="Password">Password:</string>
    <string name="PasswordTextentry">Password</string>
    <string name="Register">Register</string>
    <string name="Login">Login</string>
    <string name="Facebook">facebook_button</string>
    <string name="GPlus">gplus_button</string>
    <string name="title_activity_register">RegisterActivity</string>

    <string name="TOSHTML">
        <![CDATA[I agree to the <a href=\'http://socialearth.matthewpagecs.com/tos.html\'>terms of use</a> and <a href=\'http://socialearth.matthewpagecs.com/privacy.html\'>privacy policy</a>.]]>
    </string>

    <string name="PswdVerif">Password Verification Incorrect</string>
    <string name="PswdIncor">The passwords you have provided do not match.</string>

    <string name="EmailVerif">Email Invalid</string>
    <string name="EmailIncor">Please check the email you provided.</string>

    <string name="TOS">"Agree to ToS"</string>
    <string name="TOSAgree">You must agree to the terms of service and privacy statement.</string>
    <string name="loading">Loading...</string>

    <string name="password_requirements">You need to make your password more strong.\n\nYour password needs at least one capital letter, one lowercase letter, and one number.\n\nYour password must be between 6 and 30 characters long.</string>
    <string name="username_requirements">Your username may only contain alphanumeric characters, hyphens, and underscores.\n\nYour username must be between 4 and 24 characters long.</string>

    <string name="check_connection_to_internet">Please check your connection to the internet.</string>
    <string name="Twitter">twitter_button</string>
    <string name="title_activity_twitter">Login with Twitter</string>
    <string name="title_activity_google">Login with Google</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="proPic">profile picture</string>
    <string name="Default">Default Name</string>
    <string name="title_activity_user_map">UserMapActivity</string>
    <string name="edit">Edit...</string>
    <string name="cover_photo">cover photo</string>
    <string name="story_name">Story Name</string>

    <string-array name="permission_array">
        <item>Public</item>
        <item>Mutual Followers</item>
        <item>Only Me</item>
    </string-array>
</resources>