<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:andoid="http://schemas.android.com/apk/res-auto">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:isScrollContainer="true"
        tools:context=".activities.followersSystem.UserActivity">

        <LinearLayout
            android:id="@+id/line_layout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="25dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/profile_picture"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight=".5"
                android:contentDescription="@string/proPic"
                android:src="@drawable/profile_default" />

            <TextView
                android:id="@+id/profile_name"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:textStyle="bold"
                android:layout_gravity="end"
                android:layout_weight=".5"
                android:text="@string/Default"
                android:textSize="32sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/line_layout2"
            android:layout_below="@id/line_layout1"
            android:layout_gravity="start"
            android:layout_marginTop="25dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/Bio"
                android:layout_marginStart="16dp"
                android:gravity="start"
                android:layout_weight=".5"
                android:textStyle="bold"
                android:text="Bio"
                android:textSize="24sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/edit_bio"
                android:gravity="end"
                android:clickable="true"
                android:layout_weight=".5"
                android:text="@string/edit"
                android:layout_marginEnd="16dp"
                android:textColor="@android:color/holo_blue_light"
                android:textSize="24sp"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bioText"
            android:layout_below="@id/line_layout2"
            android:textSize="20sp"
            android:layout_marginTop="12dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="Default bio text... Please update your bio!"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/bioText"
            android:id="@+id/viewMapButton"
            android:text="View Map"
            android:layout_marginTop="12dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

    </RelativeLayout>
</ScrollView>
